--- a/final.html
+++ b/final.html
@@ -3,11 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>封鎖された家庭科室からの脱出 │ Project N</title>
-  <link rel="stylesheet" href="assets/css/normalize.css">
-  <link rel="stylesheet" href="assets/css/style.css">
-</head>
+  < meta  name = "viewport"  content = "width = device-width、initial-scale = 1.0" >
+NSグンマー< リンク  のrel = "スタイルシート"  のhref = "資産/ CSS / normalize.css"  >からの
+  <  link   rel = "stylesheet"   href = "assets / css / style.css"  >脱出
+</ヘッド>
 <body>
   <header class="header">
     <div class="container">
