--- a/main.html
+++ b/main.html
@@ -23,7 +23,7 @@
   </header>
   <main class="main main-page">
     <!-- タイトルエリア　ここから -->
-    <h1 class="main-title"><img src="assets/images/スクリーンショット2021-09-1311.13.55.png
+    <h1 class="main-title"><img src="assets/images/スクリーンショット 2021-09-13 11.17.22.png
 " alt="封鎖された家庭科室からの脱出"></h1>
     <!-- タイトルエリア　ここまで -->
     <div id="stage">
