--- a/index.html
+++ b/index.html
@@ -29,12 +29,13 @@
       <div class="container">
         <h2 class="section-title section-title--keycolor section-title--story">ストーリー</h2>
         <div class="story">
-          < p個の クラス= "テキスト・センター" >郊外にある、歴史も古い小学校··· < BR >
-            調査したが、噂の出どころはわからない。グンマー< BR >
-            そんな矢先、某有名預言者ノストラエヌスが、「このままだと家庭科室が原因で、学校が滅びるだろう」と予言。< BR >
-            不思議に思った生徒会長の君は、副会長の伊計島太郎と茨つくはの< BR >
-            ２名を連れて家庭科室の前に来たが、ドアが開かない。<br>
-            さらにドアの前に画面とキーボードが。どうやら暗号を入力しろということらしい。</p>
+          < p class= "text-center" >日本地図の群馬県の位置に存在すると噂されていた未開の地グンマー··· < br >
+            あなたのネッ友のたけしが群馬周辺をドライブしているとさらわれてしまった！< br >
+            どうやらたけしは知らず知らずのうちにグンマーに迷い込んでしまっていたようだ・・・< BR >
+            たけしは「栃木ナンバーの車で走っていただけなのに」と電話の向こうであまりの理不尽さに泣きじゃくっていたが、そこに一本の矢文が飛んできた！< br >
+            どうやら脱出に協力してくれるグンマー原住民がいるようだ・・・<br>
+            たけしはこのまま逃げることができないと死ぬまで群馬の名産物であるこんにゃくを作り続けなければいけないらしい。<br>
+            しかし、たけしはこんにゃくの下処理前の独特なにおいが苦手らしく、それだけは嫌だと言われたので、渋々手伝うことにした。</p>
           <div class="story__note__outer bg-color--gray">
             <ul class="story__note">
               <li>今、これを読んだ生徒会メンバー以外を呼んではいけない</li>
