--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
       <div class="container">
         <h2 class="section-title section-title--keycolor section-title--story">ストーリー</h2>
         <div class="story">
-          < p class= "text-center" >日本地図の群馬県の位置に存在すると噂されていた未開の地グンマー··· < br >
-            あなたのネッ友のたけしが群馬周辺をドライブしているとさらわれてしまった！< br >
-            どうやらたけしは知らず知らずのうちにグンマーに迷い込んでしまっていたようだ・・・< BR >
-            たけしは「栃木ナンバーの車で走っていただけなのに」と電話の向こうであまりの理不尽さに泣きじゃくっていたが、そこに一本の矢文が飛んできた！< br >
+          < p class= "text-center" >日本地図の群馬県の位置に存在すると噂されていた未開の地グンマー··· <br>
+            あなたのネッ友のたけしが群馬周辺をドライブしているとさらわれてしまった！<br>
+            どうやらたけしは知らず知らずのうちにグンマーに迷い込んでしまっていたようだ・・・<br>
+            たけしは「栃木ナンバーの車で走っていただけなのに」と電話の向こうであまりの理不尽さに泣きじゃくっていたが、そこに一本の矢文が飛んできた！<br>
             どうやら脱出に協力してくれるグンマー原住民がいるようだ・・・<br>
             たけしはこのまま逃げることができないと死ぬまで群馬の名産物であるこんにゃくを作り続けなければいけないらしい。<br>
             しかし、たけしはこんにゃくの下処理前の独特なにおいが苦手らしく、それだけは嫌だと言われたので、渋々手伝うことにした。</p>
