--- a/index.html
+++ b/index.html
@@ -38,12 +38,10 @@
             しかし、たけしはこんにゃくの下処理前の独特なにおいが苦手らしく、それだけは嫌だと言われたので、渋々手伝うことにした。</p>
           <div class="story__note__outer bg-color--gray">
             <ul class="story__note">
-              <li>今、これを読んだ生徒会メンバー以外を呼んではいけない</li>
-              <li>30分を超えるとS先生は出てこられない</li>
+         <li>30分を超えるとたけしは強制労働施設に連れて行かれ、死ぬまでこんにゃくを作り続けなければならない</li>
             </ul>
           </div>
-          <p class="text-center">いつの間にか、タイマーが起動した。29:58、29:57・・・急がなきゃ。<br>
-            まずはこの暗号を解かなくては！</p>
+          <p class="text-center">そうこうしているうちに少し時間が経ってしまっった。急がなくては…</p>
         </div>
       </div>
     </section>
