--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
          <li>30分を超えるとたけしは強制労働施設に連れて行かれ、死ぬまでこんにゃくを作り続けなければならない</li>
             </ul>
           </div>
-          <p class="text-center">そうこうしているうちに少し時間が経ってしまっった。急がなくては…</p>
+          <p class="text-center">そうこうしているうちに少し時間が経ってしまった。急がなくては…</p>
         </div>
       </div>
     </section>
@@ -62,7 +62,7 @@
           <div class="column">
             <div class="card">
               <h3 class="card__title">遊ぶ日時を決めよう！</h3>
-              <p class="card__content">前後の説明、解説をあわせ、想定所要時間は100分〜120分です。途中で中断することもできますが、お時間に余裕があるときにご参加ください。</p>
+              <p class="card__content">想定所要時間は３０分です。途中で中断することもできますが、お時間に余裕があるときにご参加ください。</p>
             </div>
           </div>
           <div class="column">
