--- a/hint1.html
+++ b/hint1.html
@@ -42,7 +42,7 @@
           <div class="column">
             <div class="card">
               <h3 class="card__title">ヒント<svg class="card__arrow"><use xlink:href="#arrow"></use></svg></h3>
-              <p class="card__content">動画を最後までみてみよう！</p>
+              <p class="card__content">一番右の画像はいけすで、答えは群馬の郷土料理になるよ！！</p>
             </div>
           </div>
           <div class="column">
