--- a/main.html
+++ b/main.html
@@ -87,7 +87,7 @@ Youtube貼り付けここまで -->
             <div class="clear-message">
               <div class="clear-message__title">STAGE：１  クリア！</div>
               <div class="clear-message__content">牢の中の小さい箱が開いた！<br>
-                さぁたけしを助けるため３つステージの謎をとき、暗号を見つけ出そう！</div>
+                さぁ、たけしを助けるため３つステージの謎をとき、暗号を見つけ出そう！</div>
               <button v-on:click="nextStage('stage1')" onclick="location.href='#sectionStage2'" class="clear-message__btn btn">次のステージへ<svg class="btn__arrow"><use xlink:href="#arrow"></use></svg></button>
             </div>
           </div>
