--- a/final.html
+++ b/final.html
@@ -16,7 +16,7 @@ NSグンマー< リンク  のrel = "スタイルシート"  のhref = "資産/ 
   </header>
   <main class="main final-page">
     <!-- タイトルエリア　ここから -->
-    <h1 class="main-title"><img src="assets/images/main-image.png" alt="封鎖された家庭科室からの脱出"></h1>
+    <h1 class="main-title"><img src="assets/images/main-image.png" alt="グンマーからの脱出"></h1>
     <!-- タイトルエリア　ここまで -->
     <section class="section">
       <div class="container">
