--- a/main.html
+++ b/main.html
@@ -24,7 +24,7 @@
   <main class="main main-page">
     <!-- タイトルエリア　ここから -->
     <h1 class="main-title"><img src="assets/images/スクリーンショット 2021-09-13 11.17.22.png
-" alt="封鎖された家庭科室からの脱出"></h1>
+" alt="グンマーからの脱出"></h1>
     <!-- タイトルエリア　ここまで -->
     <div id="stage">
 
@@ -202,7 +202,7 @@ Youtube貼り付けここまで -->
               どうやら彼女はグンマーから脱出するための秘密の出口の場所へ連れて行ってもらった。<br>
               どうやらこの謎を解くと出口が開き、脱出できるらしい。</p>
             <figure class="image__container">
-              <img src="assets/images/stage.png" alt="">
+              <img src="assets/images/nazo3-2.jpg" alt="">
             </figure>
           </div>
         </section>
