--- a/main.html
+++ b/main.html
@@ -87,7 +87,7 @@ Youtube貼り付けここまで -->
             <div class="clear-message">
               <div class="clear-message__title">STAGE：１  クリア！</div>
               <div class="clear-message__content">牢の中の小さい箱が開いた！<br>
-                さぁ、たけしを助けるため３つステージの謎をとき、暗号を見つけ出そう！</div>
+                中からおっきりこみが出てきて、看守に渡せと書いてあったので、看守に渡した。</div>
               <button v-on:click="nextStage('stage1')" onclick="location.href='#sectionStage2'" class="clear-message__btn btn">次のステージへ<svg class="btn__arrow"><use xlink:href="#arrow"></use></svg></button>
             </div>
           </div>
@@ -108,7 +108,7 @@ Youtube貼り付けここまで -->
             <div class="container">
               <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：2</span>手紙の謎を解け！</h2>
               <p class="text-center">おっきりこみは看守の大好物だったようで、牢の外に出ることができた！<br>
-                とりあえず箱に入っていた手紙の謎を解いて協力者の居場所を突き止めなけれ・・・。<br>
+                とりあえず箱に入っていた手紙の謎を解いて協力者の居場所を突き止めなければ・・・。<br>
                 これらを解くことで、きっと次のステップに繋がるはずだ！</p>
             </div>
           </div>
@@ -199,8 +199,8 @@ Youtube貼り付けここまで -->
           <div class="container">
             <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：3</span>家庭科室の課題とは</h2>
             <p class="text-center">答えの場所であった草津温泉へ向かったところ、協力者を見つけることができた！<br>
-              どうやら彼女はグンマーから脱出するための秘密の出口の場所へ連れて行ってもらった。<br>
-              どうやらこの謎を解くと出口が開き、脱出できるらしい。</p>
+              どうやら彼女はグンマーから脱出するための秘密の出口の場所を知っていたので、そこへ連れて行ってもらった。<br>
+              この謎を解くと出口が開き、脱出できる。</p>
             <figure class="image__container">
               <img src="assets/images/nazo3-2.jpg" alt="">
             </figure>
